<resources>
    <string name="app_name">gotoPaste</string>
    <string name="query">查询</string>
    <string name="new_shared_info">创建新的共享信息</string>
    <string name="new_shared_file">创建新的共享文件</string>
    <string name="help">查看gotoPaste使用指南</string>
    <string name="log_in_logo">登录</string>
    <string name="post_logo">发布</string>
    <string name="title_activity_user">UserActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="new_pwd">修改密码</string>
    <string name="logout">退出登录</string>
    <string name="default_post_msg">你需要发布...</string>
    <string name="set_private">设为私有</string>
    <string name="post_file">发布文件</string>
    <string name="add_ten_minutes">+10分钟</string>
    <string name="add_sixty_minutes">+60分钟</string>
    <string name="save">保存</string>
    <string name="account_center">用户中心</string>
    <string name="upload_file">上传文件</string>
    <string name="old_password">原密码</string>
    <string name="new_password">新密码</string>
    <string name="confirm_password">确认新密码</string>
</resources>
