<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_gray"
    tools:context="com.example.wangyicheng.gotopaste.AccountActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:subtitleTextAppearance="@style/ToolbarSubtitle">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/account_center"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

    </android.support.v7.widget.Toolbar>

    <Button
        android:id="@+id/logout_button"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:background="@drawable/bg_button"
        android:text="@string/logout"
        android:textColor="#ffffff" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="#ffffff"
        android:layout_below="@+id/profile"
        android:layout_alignParentStart="true"
        android:layout_marginTop="40dp"
        android:id="@+id/linearLayout2">

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:paddingStart="10dp"
            android:text="@string/new_pwd"
            android:textColor="@android:color/black" />

        <ImageView
            android:id="@+id/new_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/more_40" />
    </LinearLayout>

    <ImageView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/default_profile_80"
        android:layout_marginTop="30dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
