<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.wangyicheng.gotopaste.PostMsgActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:subtitleTextAppearance="@style/ToolbarSubtitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <EditText
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:hint="@string/default_post_msg" />
        <TextView
            android:id="@+id/route"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="33dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/new_shared_info"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="#ffffff" />

            <TextView
                android:layout_width="160dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/new_shared_info"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </LinearLayout>
        <CheckBox
            android:id="@+id/set_private"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/set_private" />

        <ImageButton
            android:id="@+id/file_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:srcCompat="@android:drawable/ic_menu_add" />


    </LinearLayout>

</RelativeLayout>