<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="com.example.wangyicheng.gotopaste.DisplayActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:titleTextAppearance="@style/ToolbarTitle"
        app:subtitleTextAppearance="@style/ToolbarSubtitle"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical">


        <EditText
            android:id="@+id/message"
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="258dp"
            android:gravity="top"
            android:inputType="textMultiLine"
            android:background="@null"
            android:hint="@string/default_post_msg" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="还有600秒失效"
            android:gravity="center"
            android:textColor="@color/rest_time"
            android:layout_gravity="center"
            android:textSize="20sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_xu"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/add_ten_minutes"
                    android:layout_marginLeft="10dp"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/add_ten_minutes"
                    android:textAlignment="center"
                    android:textColor="@color/add_time_letter"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="sans" />

                <View
                    android:layout_width="1dp"
                    android:layout_height="40dp"
                    android:background="#ffffff" />

                <TextView
                    android:id="@+id/add_sixty_minutes"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/add_sixty_minutes"
                    android:textAlignment="center"
                    android:textColor="@color/add_time_letter"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </LinearLayout>
            <LinearLayout
                android:layout_marginLeft="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_save"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/save"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textAlignment="center"
                    android:textColor="@android:color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:typeface="sans" />
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:id="@+id/path"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="/root/movie/gotopaste.avi"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="sans" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/bg_save"
            android:layout_marginLeft="4dp"
            android:layout_marginRight="4dp"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/download_file"
                android:layout_marginLeft="10dp"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="下载文件"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />

            <View
                android:layout_width="1dp"
                android:layout_height="40dp"
                android:background="#ffffff" />

            <TextView
                android:id="@+id/delete_file"
                android:layout_width="80dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="删除文件"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>